@@ -1,4 +1,5 @@
 0.7-devel
+    + More user friendly error handling if server not available.
     + Fixed table resizing not fitting parent.
     + Added week information to datepickers.
     + Added measures to facts view.
